# alexcommons-autoreadme

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements-publish.txt  requirements.txt
.github/: dependabot.yml
bootstrap-scripts/: bootstrap-dev.sh  bootstrap.ps1
devnotes/: PACKAGING.md  VERSIONING.md
goal-example/foo/bar/: README.md  __init__.py  __main__.py  _gizmo.py  _utils.py  foobar.py
src/alexcommons_autoreadme/: __init__.py  __main__.py  _cli.py  _config.py  _metadata.py  _utils.py  app.py
src/auld_autoreadme/: __init__.py  __main__.py  _cli.py  _config.py  _main.py  _project_classes.py  _tree.py  _utils.py  app.py
src/auld_autoreadme/_metadata/: .gitignore  __init__.py  version.py  version_pep440.py
tests/: test_version.py
tests/test-directories/test_pyprojecttoml_detection/: pyproject.toml
tools/custom_badges/: README.md
