[project]
name = "auld-autoreadme"
authors = [
    { name = "Alexander Lemna", email = "25907117+AlexLemna@users.noreply.github.com" },
]
dynamic = ["dependencies", "optional-dependencies", "version"]
license.file = "LICENSE"
requires-python = ">= 3.7"

[project.scripts]
auld-autoreadme = "auld_autoreadme.__main__:run"

[project.urls]
homepage = "https://github.com/AlexLemna/alexcommons-autoreadme"
documentation = "https://github.com/AlexLemna/alexcommons-autoreadme"
repository = "https://github.com/AlexLemna/alexcommons-autoreadme"

[build-system]
# 'requires' covers what gets installed in a temporary build-backend virtualenv
# when you run your PEP517/518 frontend ('build', in our case, but could
# also be 'flit', 'pdm', etc.). This is *not* the same as what's I've put
# in `requirements-publish.txt`. That file covers the frontend
requires = ["setuptools >= 61.0", "setuptools_scm[toml] >= 6.2"]
build-backend = "setuptools.build_meta"


# ###############
#   TOOLS
# ###############
# black
# -----
# The opinionated Python autoformatter. "Any customer can have a car
# painted any color that he wants, so long as it is black."
[tool.black]
target-version = ["py37", "py38", "py39", "py310", "py311"]


# interrogate
# -----------
# Measure docstring coverage
[tool.interrogate]
badge-style = "for-the-badge"
exclude = ["build"]
fail-under = 80
generate-badge = "tools/badges/."
ignore-magic = true
ignore-nested-classes = true
ignore-nested-functions = false
ignore-property-decorators = false


# isort
# -----
# An autoformatting tool for Python import statements.
[tool.isort]
add_imports = "from __future__ import annotations"
combine_as_imports = true
# sort strictly alphabetical, don't put 'import foo' above 'from bar import gizmo'
force_sort_within_sections = true
profile = "black"
skip_gitignore = true
star_first = true

# PyTest
# ------
[tool.pytest.ini_options]
addopts = "-vv -rsxX -l --tb=short --strict-markers"
# For addopts, see: https://docs.pytest.org/en/6.2.x/reference.html#ini-options-ref
#
# reporting:
# -l, --showlocals      show locals in tracebacks (disabled by default).
# -r chars              show extra test summary info as specified by chars:
#                       (f)ailed, (E)rror, (s)kipped, (x)failed, (X)passed,
#                       (p)assed, (P)assed with output, (a)ll except passed
#                       (p/P), or (A)ll. (w)arnings are enabled by default
#                       (see --disable-warnings), 'N' can be used to reset
#                       the list. (default: 'fE').
# --tb=style            traceback print mode
#                       (auto/long/short/line/native/no).
# -v, --verbose         increase verbosity.
#
# pytest-warnings:
# --strict-markers      markers not registered in the `markers` section of
#                       the configuration file raise errors.
log_cli = true
minversion = "6.0"
python_files = ["test_*.py", "__init__.py"]
python_functions = ["test_*"]
testpaths = ["tests"]


# setuptools
# ----------
# A backend library for packaging our Python project.
[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }
optional-dependencies.dev = { file = "requirements-dev.txt" }
optional-dependencies.publish = { file = "requirements-publish.txt" }
version = { file = "src/auld_autoreadme/_metadata/version.txt" }


# setuptools_scm
# ----------
# A backend library for embedding our version in the library.
[tool.setuptools_scm]
write_to = "src/auld_autoreadme/_metadata/version.txt"


# tox
# ---
# A tool for standardizing and automating testing across different
# Python versions.
[tool.tox]
legacy_tox_ini = """
[tox]
envlist = {py37,py38,py39,py310,py311}-{wheel,sdist}
isolated_build = True

[testenv]
wheel =
    wheel: true
    sdist: false
wheel_pep517 = true
allowlist_externals =
    pytest
    tox
deps =
    -r requirements.txt
commands =
    auld-autoreadme
    tox --version
"""
# another command: pytest -vv -rsxX -l --tb=short --capture=sys
